--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
 
 		<script src="app.js"></script>
+		<script src="registerController.js"></script>
 		<script src="appointmentsService.js"></script>
 		<script src="appointmentsController.js"></script>
 		<script src="clientsService.js"></script>
@@ -35,6 +36,9 @@
 		      <li><a ui-sref="clients">clients</a></li>
 		      <li><a ui-sref="appointments">appointments</a></li>
 		      <li><a ui-sref="login">login</a></li>
+		    </ul>
+		    <ul class="nav navbar-nav pull-right">
+		    	<li><a ui-sref="logout"><strong>logout</strong></a></li>
 		    </ul>
 		</nav>
 		<div class="container-fluid">
