--- a/public/register.html
+++ b/public/register.html
@@ -4,6 +4,14 @@
       		<div class="jumbotron-content">
         		<h1>Hair I Am Shelly...</h1>
         		<p class="jumbotron-lg-only">Join our community or login now</p>
+                <div class="form-group">
+                  <label for="firstName">First Name:</label>
+                  <input type="text" name="firstName" class="form-control" placeholder="FirstName" ng-model="credentials.firstName">
+                </div>
+                <div class="form-group">
+                  <label for="lastName">Last Name:</label>
+                  <input type="text" name="lastName" class="form-control" placeholder="LastName" ng-model="credentials.lastName">
+                </div>
           			<div class="form-group">
             			<label for="email">Email:</label>
             			<input type="email" name="email" class="form-control" placeholder="Email" ng-model="credentials.email">
@@ -12,7 +20,7 @@
           				<label for="password">Password:</label>
             			<input type="password" name="password" class="form-control" placeholder="Password" ng-model="credentials.password">
           			</div>
-          			<button class="btn btn-primary btn-large" ng-click="register()">Sign Up</button><button class="pull-right btn btn-default" ng-click="login()">Sign In</button>
+          			<button class="btn btn-primary btn-large" ng-click="register()">Sign Up</button>
       		</div>
     	</div>
 	</div>
