--- a/public/login.html
+++ b/public/login.html
@@ -12,6 +12,7 @@
           				<label for="password">Password:</label>
             			<input type="password" name="password" class="form-control" placeholder="Password" ng-model="credentials.password">
           			</div>
+                <div ng-if="error" class="alert alert-danger" ng-bind="error"></div>
           			<button class="btn btn-primary btn-large" ng-click="register()">Sign Up</button><button class="pull-right btn btn-default" ng-click="login()">Sign In</button>
       		</div>
     	</div>
