--- a/public/register.html
+++ b/public/register.html
@@ -3,14 +3,14 @@
     	<div class="jumbotron">
       		<div class="jumbotron-content">
         		<h1>Hair I Am Shelly...</h1>
-        		<p class="jumbotron-lg-only">Join our community or login now</p>
+        		<div class="jumbotron-lg-only">
                 <div class="form-group">
                   <label for="firstName">First Name:</label>
-                  <input type="text" name="firstName" class="form-control" placeholder="FirstName" ng-model="credentials.firstName">
+                  <input type="firstName" name="firstName" class="form-control" placeholder="FirstName" ng-model="credentials.firstName">
                 </div>
                 <div class="form-group">
                   <label for="lastName">Last Name:</label>
-                  <input type="text" name="lastName" class="form-control" placeholder="LastName" ng-model="credentials.lastName">
+                  <input type="lastName" name="lastName" class="form-control" placeholder="LastName" ng-model="credentials.lastName">
                 </div>
           			<div class="form-group">
             			<label for="email">Email:</label>
@@ -20,7 +20,9 @@
           				<label for="password">Password:</label>
             			<input type="password" name="password" class="form-control" placeholder="Password" ng-model="credentials.password">
           			</div>
+                <div ng-if="error" class="alert alert-danger" ng-bind="error"></div>
           			<button class="btn btn-primary btn-large" ng-click="register()">Sign Up</button>
+              </div>
       		</div>
     	</div>
 	</div>
