--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,15 @@
 		<title>client profile</title>
 		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 		<link rel="stylesheet" href="javascripts/bootstrap/css/bootstrap.min.css"><!-- load bootstrap -->
-		<link rel="stylesheet" type="text/css" href="stylesheets/site.css">
+		<link rel='stylesheet' href='javascripts/fullcalendar/fullcalendar.min.css' />
+		<link rel="stylesheet" href="stylesheets/site.css">
 		<script src="javascripts/angular/angular.min.js"></script><!-- load angular -->
+		<script src="javascripts/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
 		<script src="javascripts/angular-ui-router/angular-ui-router.min.js"></script>
 		
 
 
-		<link rel='stylesheet' href='javascripts/fullcalendar/fullcalendar.css' />
+		
 	 	<script src='javascripts/jquery/dist/jquery.min.js'></script>
 		<script src='javascripts/moment/moment.min.js'></script>
 		<script src='javascripts/fullcalendar/fullcalendar.js'></script> 
@@ -22,6 +24,7 @@
 		<script src="appointmentsService.js"></script>
 		<script src="appointmentsController.js"></script>
 		<script src="clientsService.js"></script>
+		<script src="profileController.js"></script>
 		<script src="clientsController.js"></script>
 		<script src="loginController.js"></script>
 		<base href="/">
