--- a/public/appointments.html
+++ b/public/appointments.html
@@ -1,1 +1,27 @@
-<div id='calendar' ng-modle="uiConfig"></div>
+<div id='container'>
+	<script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title">New Appointment</h3>
+        </div>
+        <div class="modal-body">
+			<div class="form-group">
+    			<label for="email">Title:</label>
+    			<input type="title" name="title" class="form-control" placeholder="Title" ng-model="event.title">
+  			</div>
+  			<div class="form-group">
+  				<label for="startDate">Start:</label>
+    			<input type="startDate" name="startDate" class="form-control" placeholder="StartDate" ng-model="event.start">
+  			</div>
+  			<div class="form-group">
+  				<label for="endDate">End:</label>
+    			<input type="endDate" name="endDate" class="form-control" placeholder="EndDate" ng-model="event.end">
+  			</div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
+	<div id='calendar' ng-modle="uiConfig"></div>
+</div>
+
