change to Bearer Authorization

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 			<ul class="nav navbar-nav">
 		      <li><a ui-sref="home">Home</a></li>
 		      <li><a ui-sref="clients">clients</a></li>
+		      <li><a ui-sref="profile">my profile</a></li>
 		      <li><a ui-sref="appointments">appointments</a></li>
 		      <li><a ui-sref="login">login</a></li>
 		    </ul>
