--- a/public/profile.html
+++ b/public/profile.html
@@ -40,18 +40,15 @@
 
 		<div class="row">
 			<div class="col-xs-12">
-				<!--< div class="col-xs-6">
-					<label class="client-sub-header">address
-					<input type="text" class="text-left client-content" ng-model="client.address"></input></label>
-				</div> -->
 
-				<pre>Model: {{asyncSelected | json}}</pre>
-			    <input type="text" ng-model="asyncSelected" placeholder="Locations loaded via $http" uib-typeahead="address for address in getLocation($viewValue)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
-			    <i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
-			    <div ng-show="noResults">
-			      <i class="glyphicon glyphicon-remove"></i> No Results Found
-			    </div>
-
+				<div class="col-xs-6">
+					<label class="client-sub-header">address</label>
+			    	<input type="text" ng-model="asyncSelected" placeholder="" uib-typeahead="address for address in getLocation($viewValue)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
+			    	<i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
+			    	<div ng-show="noResults">
+			      		<i class="glyphicon glyphicon-remove"></i> No Results Found
+			    	</div>
+				</div>
 
 				<div class="col-xs-6">
 					<label class="client-sub-header">phone
