--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		<link rel='stylesheet' href='javascripts/fullcalendar/fullcalendar.min.css' />
 		<link rel="stylesheet" href="stylesheets/site.css">
 		<script src="javascripts/angular/angular.min.js"></script><!-- load angular -->
+		<script src="javascripts/angular-resource/angular-resource.js"></script>
 		<script src="javascripts/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
 		<script src="javascripts/angular-ui-router/angular-ui-router.min.js"></script>
 		
