refactored resource into separate file

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
 
 
 		<script src="app.js"></script>
+		<script src="client/authenticationService.js"></script>
+		<script src="client/sessionService.js"></script>
 		<script src="registerController.js"></script>
 		<script src="appointmentsService.js"></script>
 		<script src="appointmentsController.js"></script>
