--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 		<script src="client/authenticationService.js"></script>
 		<script src="client/sessionService.js"></script>
 		<script src="registerController.js"></script>
-		<script src="appointmentsService.js"></script>
+		<script src="client/appointmentsService.js"></script>
 		<script src="appointmentsController.js"></script>
 		<script src="clientsService.js"></script>
 		<script src="profileController.js"></script>
