Clients Looking Good

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
 		<script src="client/appointmentsService.js"></script>
 		<!-- <script src="appointmentsService.js"></script> -->
 		<script src="appointmentsController.js"></script>
-		<script src="clientsService.js"></script>
+		<!-- <script src="clientsService.js"></script> -->
+		<script src="client/client.js"></script>
 		<script src="profileController.js"></script>
 		<script src="clientsController.js"></script>
 		<script src="loginController.js"></script>
