--- a/public/clients.html
+++ b/public/clients.html
@@ -11,11 +11,11 @@
 			<div class="col-xs-12">
 				<div class="col-xs-6">
 					<label class="client-sub-header text-left">date
-					<input type="text" class="text-left client-content"></input></label>
+					<input type="text" class="text-left client-content" ng-model="client.date"></input></label>
 				</div>
 				<div class="col-xs-6">
 					<label class="client-sub-header">dob
-					<input type="text" class="text-left client-content"></input></label>
+					<input type="text" class="text-left client-content" ng-model="client.dob"></input></label>
 				</div>
 			</div>
 		</div>
