--- a/public/profile.html
+++ b/public/profile.html
@@ -11,7 +11,7 @@
 			<div class="col-xs-12">
 				<div class="col-xs-6">
 					<label class="client-sub-header text-left">date
-					<input type="text" class="text-left client-content"></input></label>
+					<input type="text" class="text-left client-content" ng-model="client.date"></input></label>
 				</div>
 				<div class="col-xs-6">
 					<p class="input-group">
@@ -43,7 +43,7 @@
 
 				<div class="col-xs-6">
 					<label class="client-sub-header">address</label>
-			    	<input type="text" ng-model="asyncSelected" placeholder="" uib-typeahead="address for address in getLocation($viewValue)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
+			    	<input type="text" ng-model="client.address" placeholder="" uib-typeahead="address for address in getLocation($viewValue)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
 			    	<i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
 			    	<div ng-show="noResults">
 			      		<i class="glyphicon glyphicon-remove"></i> No Results Found
