new ui.router, route to component

--- a/public/clients.html
+++ b/public/clients.html
@@ -1,2 +1,6 @@
-<h1>Contacts Page</h1>
-<div ui-view></div>
+<h4>In Component</h4>
+  <ul>
+  	<li ng-repeat="client in $ctrl.allClients">
+  			{{client.firstName}}
+  	</li>
+  </ul>
