--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 		<!-- <script src="javascripts/angular-ui-router/angular-ui-router.min.js"></script> -->
 		<script src="//unpkg.com/angular-ui-router@1.0.0-rc.1/release/angular-ui-router.js"></script>
 
+		<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script> -->
+
 
 		
 	 	<script src='javascripts/jquery/dist/jquery.min.js'></script>
