--- a/public/profile.html
+++ b/public/profile.html
@@ -1,5 +1,6 @@
 
-<div class="row" ng-init="refresh()">
+<!-- <div class="row" ng-init="refresh()"> -->
+<div class="row">
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-12 text-center client-header">
@@ -11,14 +12,14 @@
 			<div class="col-xs-12">
 				<div class="col-xs-6">
 					<label class="client-sub-header text-left">date
-					<input type="text" class="text-left client-content" ng-model="client.date"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.date"></input></label>
 				</div>
 				<div class="col-xs-6">
 					<p class="input-group">
 						<label class="client-sub-header text-left">dob</label>
-          				<input type="text" class="form-control client-content" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+          				<input type="text" class="form-control client-content" uib-datepicker-popup="{{format}}" ng-model="$ctrl.client.dob" is-open="$ctrl.popup1.opened" datepicker-options="$ctrl.dateOptions" required="true" close-text="Close" alt-input-formats="$ctrl.altInputFormats" />
 			          <span class="input-group-btn">
-			            <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+			            <button type="button" class="btn btn-default" ng-click="$ctrl.open1()"><i class="glyphicon glyphicon-calendar"></i></button>
 			          </span>
 			        </p>
 				</div>
@@ -29,11 +30,11 @@
 			<div class="col-xs-12">
 				<div class="col-xs-6">
 					<label class="client-sub-header">name
-					<input type="text" class="text-left client-content" ng-model="client.firstName"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.firstName"></input></label>
 				</div>
 				<div class="col-xs-6">
 					<label class="client-sub-header">phone
-					<input type="text" class="text-left client-content" ng-model="client.phoneWork"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.phoneWork"></input></label>
 				</div>
 			</div>
 		</div>
@@ -43,7 +44,7 @@
 
 				<div class="col-xs-6">
 					<label class="client-sub-header">address</label>
-			    	<input type="text" ng-model="client.address" placeholder="" uib-typeahead="address for address in getLocation($viewValue)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
+			    	<input type="text" ng-model="$ctrl.client.address" placeholder="" uib-typeahead="address for address in $ctrl.getLocation($viewValue)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
 			    	<i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
 			    	<div ng-show="noResults">
 			      		<i class="glyphicon glyphicon-remove"></i> No Results Found
@@ -52,7 +53,7 @@
 
 				<div class="col-xs-6">
 					<label class="client-sub-header">phone
-					<input type="text" class="text-left client-content" ng-model="client.phoneHome"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.phoneHome"></input></label>
 				</div>
 			</div>
 		</div>
@@ -61,15 +62,15 @@
 			<div class="col-xs-12">
 				<div class="col-xs-4">
 					<label class="client-sub-header">city
-					<input type="text" class="text-left client-content" ng-model="client.city"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.city"></input></label>
 				</div>
 				<div class="col-xs-4">
 					<label class="client-sub-header">state
-					<input type="text" class="text-left client-content" ng-model="client.state"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.state"></input></label>
 				</div>
 				<div class="col-xs-4">
 					<label class="client-sub-header">zip
-					<input type="text" class="text-left client-content" ng-model="client.zip"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.zip"></input></label>
 				</div>
 			</div>
 		</div>
@@ -78,11 +79,11 @@
 			<div class="col-xs-12">
 				<div class="col-xs-6">
 					<label class="client-sub-header">cell #
-					<input type="text" class="text-left client-content" ng-model="client.cell"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.cell"></input></label>
 				</div>
 				<div class="col-xs-6">
 					<label class="client-sub-header">email
-					<input type="text" class="text-left client-content" ng-model="client.email"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.email"></input></label>
 				</div>
 			</div>
 		</div>
@@ -91,11 +92,11 @@
 			<div class="col-xs-12">
 				<div class="col-xs-6">
 					<label class="client-sub-header">occupation
-					<input type="text" class="text-left client-content" ng-model="client.occupation"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.occupation"></input></label>
 				</div>
 				<div class="col-xs-6">
 					<label class="client-sub-header">employer
-					<input type="text" class="text-left client-content" ng-model="client.employer"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.employer"></input></label>
 				</div>
 			</div>
 		</div>
@@ -104,11 +105,11 @@
 			<div class="col-xs-12">
 				<div class="col-xs-6">
 					<label class="client-sub-header">preferred appt. day
-					<input type="text" class="text-left client-content" nng-model="client.preferredAptDay"></input></label>
+					<input type="text" class="text-left client-content" nng-model="$ctrl.client.preferredAptDay"></input></label>
 				</div>
 				<div class="col-xs-6">
 					<label class="client-sub-header">time
-					<input type="text" class="text-left client-content" ng-model="client.time"></input></label>
+					<input type="text" class="text-left client-content" ng-model="$ctrl.client.time"></input></label>
 				</div>
 			</div>
 		</div>
@@ -121,7 +122,7 @@
 
 		<div class="row">
 			<div class="col-xs-12">
-				<input type="text" class="text-left client-content" ng-model="client.commonHairProducts"></input>
+				<input type="text" class="text-left client-content" ng-model="$ctrl.client.commonHairProducts"></input>
 			</div>
 		</div>
 
@@ -133,7 +134,7 @@
 
 		<div class="row">
 			<div class="col-xs-12">
-				<input type="text" class="text-left client-content" ng-model="client.commonRetailProducts"></input>
+				<input type="text" class="text-left client-content" ng-model="$ctrl.client.commonRetailProducts"></input>
 			</div>
 		</div>
 
@@ -145,7 +146,7 @@
 
 		<div class="row">
 			<div class="col-xs-12">
-				<input type="text" class="text-left client-content" ng-model="client.referred"></input>
+				<input type="text" class="text-left client-content" ng-model="$ctrl.client.referred"></input>
 			</div>
 		</div>
 
@@ -157,12 +158,12 @@
 
 		<div class="row">
 			<div class="col-xs-12">
-				<input type="text" class="text-left client-content" ng-model="client.clientRemarks"></input>
+				<input type="text" class="text-left client-content" ng-model="$ctrl.client.clientRemarks"></input>
 			</div>
 		</div>
 
 		<div class="row text-center" style="margin:1vmin;">
-			<button class="btn btn-primary client-content" type="button" ng-click="updateClient()">Update</button>
+			<button class="btn btn-primary client-content" type="button" ng-click="$ctrl.updateClient();">Update</button>
 		</div>
 
 	</div>
