--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 		<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script> -->
 
-
+		<script src="https://cdn.jsdelivr.net/g/lodash@4.17.4(lodash.min.js+lodash.core.js)"></script>
 		
 	 	<script src='javascripts/jquery/dist/jquery.min.js'></script>
 		<script src='javascripts/moment/moment.min.js'></script>
