--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
 		<script src="javascripts/angular/angular.min.js"></script><!-- load angular -->
 		<script src="javascripts/angular-resource/angular-resource.js"></script>
 		<script src="javascripts/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-		<!-- <script src="javascripts/angular-ui-router/angular-ui-router.min.js"></script> -->
-		<script src="//unpkg.com/angular-ui-router@1.0.0-rc.1/release/angular-ui-router.js"></script>
+		<script src="javascripts/angular-ui-router/release/angular-ui-router.min.js"></script>
+		<!-- <script src="//unpkg.com/angular-ui-router@1.0.0-rc.1/release/angular-ui-router.js"></script> -->
 
 		<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script> -->
 
-		<script src="https://cdn.jsdelivr.net/g/lodash@4.17.4(lodash.min.js+lodash.core.js)"></script>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
 		
 	 	<script src='javascripts/jquery/dist/jquery.min.js'></script>
 		<script src='javascripts/moment/moment.min.js'></script>
