--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,8 @@
 		    	<li><a ui-sref="logout"><strong>logout</strong></a></li>
 		    </ul>
 		</nav>
-		<!-- <div class="container-fluid"> -->
+		<div class="container-fluid">
 			<ui-view></ui-view>
-		<!-- </div> -->
+		</div>
 	</body>
 </html>
